# substrate-verifiable

substrate-verifiable-credentials/: Cargo.toml  README.md
substrate-verifiable-credentials/runtime/: Cargo.toml
substrate-verifiable-credentials/runtime/src/: lib.rs  verifiablecreds.rs
substrate-verifiable-credentials/runtime/wasm/: Cargo.toml  build.sh
substrate-verifiable-credentials/runtime/wasm/src/: lib.rs
substrate-verifiable-credentials/src/: chain_spec.rs  main.rs  service.rs
