[lib]
crate-type = ['cdylib']

[workspace]
members = []
[profile.release]
lto = true
panic = 'abort'

[features]
default = []
std = ['substrate-verifiable-credentials-runtime/std']
[dependencies.substrate-verifiable-credentials-runtime]
default-features = false
path = '..'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'substrate-verifiable-credentials-runtime-wasm'
version = '1.0.0'
